Bell state name

--- a/entanglement.tex
+++ b/entanglement.tex
@@ -67,7 +67,7 @@ $\frac{1}{\sqrt{2}}\begin{bmatrix}
 \end{bmatrix}
 \begin{bmatrix} 1 \\ 0 \\ 0 \\ 0 \end{bmatrix} = \frac{1}{\sqrt{2}}\begin{bmatrix} 1 \\ 0 \\ 0 \\ 1 \end{bmatrix} $
 
-\subsection{Entangled}
+\subsection{Entangled ($\ket{\phi^+}$)}
 $\begin{bmatrix} 1 \\ 0 \\ 0 \\ 1 \end{bmatrix} \rightarrow \frac{1}{\sqrt{2}} \ket{00} + \frac{1}{\sqrt{2}} \ket{11} \neq \ket{a} \otimes \ket{b}$
 
 
