--- a/bibliography.bib
+++ b/bibliography.bib
@@ -145,3 +145,36 @@
   url = {https://learning.quantum-computing.ibm.com/course/basics-of-quantum-information/single-systems\#unitary-operations},
   urldate = {2023-09-20}
 }
+@ARTICLE{landauer61,
+  author={Landauer, R.},
+  journal={IBM Journal of Research and Development}, 
+  title={Irreversibility and Heat Generation in the Computing Process}, 
+  year={1961},
+  volume={5},
+  number={3},
+  pages={183-191},
+  doi={10.1147/rd.53.0183}}
+
+@Article{bennett82,
+author="Bennett, Charles H.",
+title="The thermodynamics of computation---a review",
+journal="International Journal of Theoretical Physics",
+year="1982",
+month="Dec",
+day="01",
+volume="21",
+number="12",
+pages="905--940",
+issn="1572-9575",
+doi="10.1007/BF02084158",
+url="https://doi.org/10.1007/BF02084158"
+}
+
+@misc{bennett2003notes,
+      title={Notes on Landauer's principle, Reversible Computation and Maxwell's Demon}, 
+      author={Charles H. Bennett},
+      year={2003},
+      eprint={physics/0210005},
+      archivePrefix={arXiv},
+      primaryClass={physics.class-ph}
+}
