--- a/use_of_binary_in_computing.tex
+++ b/use_of_binary_in_computing.tex
@@ -52,7 +52,6 @@ System.out.println(Integer.toBinaryString(y));
 \end{tabular}
 \end{table}
 
-
 \section{Nanometers}
 \begin{table}
 \begin{tabular}{rlr}
@@ -64,12 +63,17 @@ System.out.println(Integer.toBinaryString(y));
   \bottomrule
 \end{tabular}
 \end{table}
-
 \begin{marginfigure}[-30mm]
   \centering
   \includegraphics[width=24mm]{img/ibm2nm.png}
 \end{marginfigure}
-\marginnote{\bibentry{ibm2nm}}
+
+
+\section{Moore's Law}
+\includegraphics{img/moores_law.png}
+\marginnote[-40mm]{\bibentry{karlruppmicroprocessortrenddata}}
+
+
 
 \section{From Physical to Logical}
 
