--- a/bibliography.bib
+++ b/bibliography.bib
@@ -184,3 +184,19 @@
   urldate = {2023-09-14},
   date = {2023-08-23}
 }
+@InProceedings{klappenecker_03,
+author="Klappenecker, Andreas
+and R{\"o}tteler, Martin",
+editor="Fossorier, Marc
+and H{\o}holdt, Tom
+and Poli, Alain",
+title="Unitary Error Bases: Constructions, Equivalence, and Applications",
+booktitle="Applied Algebra, Algebraic Algorithms and Error-Correcting Codes",
+year="2003",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="139--149",
+abstract="Unitary error bases are fundamental primitives in quantum computing, which are instrumental for quantum error-correcting codes and the design of teleportation and super-dense coding schemes. There are two prominent constructions of such bases: an algebraic construction using projective representations of finite groups and a combinatorial construction using Latin squares and Hadamard matrices. An open problem posed by Schlingemann and Werner relates these two constructions, and asks whether each algebraic construction is equivalent to a combinatorial construction. We answer this question by giving an explicit counterexample in dimension 165 which has been constructed with the help of a computer algebra system.",
+isbn="978-3-540-44828-0"
+}
+
