--- a/unitary_error_basis.tex
+++ b/unitary_error_basis.tex
@@ -28,7 +28,7 @@ $\begin{bmatrix}
 \end{bmatrix}$
 
 \section{Inner Product}
-
+\marginnote{\bibentry{klappenecker_03}}
 $A, B$: $d \times d$ matrices.\\[2mm]
 $\langle A, B \rangle = \textsf{tr}(A^* B) / d$\\[2mm]
 $\textsf{tr}(A) = \sum_i a_{ii}$
