--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,23 +2,26 @@
   title = {Policies and Regulations},
   author = {Atlantic Technological University},
   year = 2023,
-  howpublished = {\\See \url{https://studenthub.atu.ie} for more.}
+  howpublished = {\\See \url{https://studenthub.atu.ie} for more.},
 }
+
 @misc{atustudenthub,
   title = {ATU Student Hub},
   year = 2023,
   url = {https://studenthub.atu.ie/},
   urldate = {2023-08-20},
-  date = {2023-08-09}
+  date = {2023-08-09},
 }
+
 @misc{bennett2003notes,
   title = {Notes on Landauer's principle, Reversible Computation and Maxwell's Demon},
   author = {Charles H. Bennett},
   year = 2003,
   eprint = {physics/0210005},
   archiveprefix = {arXiv},
-  primaryclass = {physics.class-ph}
+  primaryclass = {physics.class-ph},
 }
+
 @article{bennett82,
   title = {The thermodynamics of computation---a review},
   author = {Bennett, Charles H.},
@@ -31,62 +34,71 @@
   pages = {905--940},
   doi = {10.1007/BF02084158},
   issn = {1572-9575},
-  url = {https://doi.org/10.1007/BF02084158}
+  url = {https://doi.org/10.1007/BF02084158},
 }
+
 @misc{chemlibreh2spectrum,
   title = {7.3: The Atomic Spectrum of Hydrogen -- Chemistry LibreTexts},
   year = 2015,
   url = {https://chem.libretexts.org/Courses/Solano\_Community\_College/Chem\_160/Chapter\_07\%3A\_Atomic\_Structure\_and\_Periodicity/7.03\_The\_Atomic\_Spectrum\_of\_Hydrogen},
   urldate = {2023-09-17},
-  date = {2015-06-20}
+  date = {2015-06-20},
 }
+
 @misc{circuitdigestandgate,
   title = {Designing an {AND} Gate using Transistors},
   year = 2023,
   url = {https://circuitdigest.com/electronic-circuits/designing-and-gate-using-transistors},
   urldate = {2023-09-14},
-  date = {2023-09-14}
+  date = {2023-09-14},
 }
+
 @misc{git,
   title = {Git},
   author = {{S}oftware {F}reedom {C}onservancy},
   year = 2023,
-  howpublished = {\\ \url{https://git-scm.com/}}
+  howpublished = {\\ \url{https://git-scm.com/}},
 }
+
 @misc{github,
   title = {Git{H}ub},
   author = {Git{H}ub, Inc.},
   year = 2023,
-  howpublished = {\\ \url{https://github.com/}}
+  howpublished = {\\ \url{https://github.com/}},
 }
+
 @misc{golangnewton,
   title = {A Tour of Go},
   year = 2023,
   url = {https://go.dev/tour/flowcontrol/8},
   urldate = {2023-08-18},
-  date = {2023-08-18}
+  date = {2023-08-18},
 }
+
 @misc{ibm2nm,
   title = {Introducing the world's first 2 nm node chip \vert{} IBM Research Blog},
   year = 2023,
   url = {https://research.ibm.com/blog/2-nm-chip},
   urldate = {2023-09-14},
-  date = {2023-08-03}
+  date = {2023-08-03},
 }
+
 @misc{ibmqiskitsinglesystems,
   title = {Single systems -- IBM Quantum Learning},
   year = 2023,
   url = {https://learning.quantum-computing.ibm.com/course/basics-of-quantum-information/single-systems\#unitary-operations},
   urldate = {2023-09-20},
-  date = {2023-09-20}
+  date = {2023-09-20},
 }
+
 @misc{irisdataset,
   title = {{I}ris -- {UCI} {M}achine {L}earning {R}epository},
   year = 2023,
   url = {https://archive.ics.uci.edu/dataset/53/iris},
   urldate = {2023-08-17},
-  date = {2023-08-17}
+  date = {2023-08-17},
 }
+
 @misc{karlruppmicroprocessortrenddata,
   title = {karlrupp/microprocessor-trend-data: Data repository for my blog series on microprocessor trend data.},
   year = 2023,
@@ -94,6 +106,19 @@
   urldate = {2023-09-23},
   date = {2023-09-23},
 }
+
+@inproceedings{klappenecker_03,
+  title = {Unitary Error Bases: Constructions, Equivalence, and Applications},
+  author = {Klappenecker, Andreas and R{\"o}tteler, Martin},
+  year = 2003,
+  booktitle = {Applied Algebra, Algebraic Algorithms and Error-Correcting Codes},
+  publisher = {Springer Berlin Heidelberg},
+  address = {Berlin, Heidelberg},
+  pages = {139--149},
+  isbn = {978-3-540-44828-0},
+  editor = {Fossorier, Marc and H{\o}holdt, Tom and Poli, Alain},
+}
+
 @article{landauer61,
   title = {Irreversibility and Heat Generation in the Computing Process},
   author = {Landauer, R.},
@@ -102,101 +127,96 @@
   volume = 5,
   number = 3,
   pages = {183--191},
-  doi = {10.1147/rd.53.0183}
+  doi = {10.1147/rd.53.0183},
 }
+
 @misc{mathworldlatinsquare,
   title = {Latin Square -- from Wolfram MathWorld},
   year = 2023,
   url = {https://mathworld.wolfram.com/LatinSquare.html},
   urldate = {2023-09-18},
-  date = {2023-09-18}
+  date = {2023-09-18},
 }
+
 @misc{musto2016quantum,
   title = {Quantum Latin squares and unitary error bases},
   author = {Benjamin Musto and Jamie Vicary},
   year = 2016,
   eprint = {1504.02715},
   archiveprefix = {arXiv},
-  primaryclass = {quant-ph}
+  primaryclass = {quant-ph},
 }
+
 @misc{nandlogicwiki,
   title = {NAND logic - Wikipedia},
   year = 2023,
   url = {https://en.wikipedia.org/wiki/NAND\_logic},
   urldate = {2023-09-16},
-  date = {2023-09-02}
+  date = {2023-09-02},
 }
+
 @misc{newtonsqrt,
   title = {Square Roots via Newton's Method},
   year = 2015,
   url = {https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf},
   urldate = {2023-08-18},
-  date = {2015-02-04}
+  date = {2015-02-04},
 }
+
 @misc{oraclefloatingpoint,
   title = {What Every Computer Scientist Should Know About Floating-Point Arithmetic},
   year = 2023,
   url = {https://docs.oracle.com/cd/E19957-01/806-3568/ncg\_goldberg.html},
   urldate = {2023-09-14},
-  date = {2023-09-14}
+  date = {2023-09-14},
 }
+
 @misc{photoelectriceffectbritannica,
   title = {Photoelectric effect -- Britannica},
   author = {Britannica, T. Editors of Encyclopaedia},
   year = 2023,
   url = {https://www.britannica.com/science/photoelectric-effect},
   urldate = {2023-09-17},
-  date = {2023-08-16}
+  date = {2023-08-16},
 }
+
 @misc{qiskit,
   title = {Qiskit},
   year = 2023,
   url = {https://qiskit.org/},
   urldate = {2023-08-20},
-  date = {2023-08-20}
+  date = {2023-08-20},
 }
+
 @misc{qiskitdeutsch,
   title = {Quantum query algorithms \vert{} IBM Quantum Learning},
   year = 2023,
   url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms\#deutschs-algorithm},
   urldate = {2023-08-20},
-  date = {2023-08-20}
+  date = {2023-08-20},
 }
+
 @misc{qiskitentanglement,
   title = {Multiple qubits and entanglement},
   year = 2023,
   url = {https://learn.qiskit.org/course/ch-gates/introductionw},
   urldate = {2023-09-20},
-  date = {2023-09-20}
+  date = {2023-09-20},
 }
+
 @misc{quantacollatz,
   title = {The Simple Math Problem We Still Can't Solve \vert{} Quanta Magazine},
   year = 2020,
   url = {https://www.quantamagazine.org/why-mathematicians-still-cant-solve-the-collatz-conjecture-20200922/},
   urldate = {2023-08-18},
-  date = {2020-09-22}
+  date = {2020-09-22},
 }
+
 @misc{sanglardfloatingpoint,
   title = {Floating Point Visually Explained},
   author = {{F}abien {S}anglard},
   year = 2023,
   url = {https://fabiensanglard.net/floating\_point\_visually\_explained/},
   urldate = {2023-09-14},
-  date = {2023-08-23}
+  date = {2023-08-23},
 }
-@InProceedings{klappenecker_03,
-author="Klappenecker, Andreas
-and R{\"o}tteler, Martin",
-editor="Fossorier, Marc
-and H{\o}holdt, Tom
-and Poli, Alain",
-title="Unitary Error Bases: Constructions, Equivalence, and Applications",
-booktitle="Applied Algebra, Algebraic Algorithms and Error-Correcting Codes",
-year="2003",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="139--149",
-abstract="Unitary error bases are fundamental primitives in quantum computing, which are instrumental for quantum error-correcting codes and the design of teleportation and super-dense coding schemes. There are two prominent constructions of such bases: an algebraic construction using projective representations of finite groups and a combinatorial construction using Latin squares and Hadamard matrices. An open problem posed by Schlingemann and Werner relates these two constructions, and asks whether each algebraic construction is equivalent to a combinatorial construction. We answer this question by giving an explicit counterexample in dimension 165 which has been constructed with the help of a computer algebra system.",
-isbn="978-3-540-44828-0"
-}
-
