--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,7 +4,6 @@
   year = 2023,
   howpublished = {\\See \url{https://studenthub.atu.ie} for more.},
 }
-
 @misc{atustudenthub,
   title = {ATU Student Hub},
   year = 2023,
@@ -12,7 +11,6 @@
   urldate = {2023-08-20},
   date = {2023-08-09},
 }
-
 @misc{bennett2003notes,
   title = {Notes on Landauer's principle, Reversible Computation and Maxwell's Demon},
   author = {Charles H. Bennett},
@@ -21,7 +19,6 @@
   archiveprefix = {arXiv},
   primaryclass = {physics.class-ph},
 }
-
 @article{bennett82,
   title = {The thermodynamics of computation---a review},
   author = {Bennett, Charles H.},
@@ -36,7 +33,6 @@
   issn = {1572-9575},
   url = {https://doi.org/10.1007/BF02084158},
 }
-
 @misc{chemlibreh2spectrum,
   title = {7.3: The Atomic Spectrum of Hydrogen -- Chemistry LibreTexts},
   year = 2015,
@@ -44,7 +40,6 @@
   urldate = {2023-09-17},
   date = {2015-06-20},
 }
-
 @misc{circuitdigestandgate,
   title = {Designing an {AND} Gate using Transistors},
   year = 2023,
@@ -52,21 +47,18 @@
   urldate = {2023-09-14},
   date = {2023-09-14},
 }
-
 @misc{git,
   title = {Git},
   author = {{S}oftware {F}reedom {C}onservancy},
   year = 2023,
   howpublished = {\\ \url{https://git-scm.com/}},
 }
-
 @misc{github,
   title = {Git{H}ub},
   author = {Git{H}ub, Inc.},
   year = 2023,
   howpublished = {\\ \url{https://github.com/}},
 }
-
 @misc{golangnewton,
   title = {A Tour of Go},
   year = 2023,
@@ -74,7 +66,16 @@
   urldate = {2023-08-18},
   date = {2023-08-18},
 }
-
+@book{griffiths2018,
+  title = {Introduction to quantum mechanics},
+  author = {Griffiths, David J. and Schroeter, Darrell F.},
+  year = 2018,
+  publisher = {Cambridge University Press Cambridge, United Kingdom},
+  address = {Cambridge, United Kingdom},
+  isbn = {9781107189638; 1107189632; 9781108791106; 1108791107},
+  edition = {Third edition},
+  language = {eng},
+}
 @misc{ibm2nm,
   title = {Introducing the world's first 2 nm node chip \vert{} IBM Research Blog},
   year = 2023,
@@ -82,7 +83,6 @@
   urldate = {2023-09-14},
   date = {2023-08-03},
 }
-
 @misc{ibmqiskitsinglesystems,
   title = {Single systems -- IBM Quantum Learning},
   year = 2023,
@@ -90,7 +90,6 @@
   urldate = {2023-09-20},
   date = {2023-09-20},
 }
-
 @misc{irisdataset,
   title = {{I}ris -- {UCI} {M}achine {L}earning {R}epository},
   year = 2023,
@@ -98,7 +97,6 @@
   urldate = {2023-08-17},
   date = {2023-08-17},
 }
-
 @misc{karlruppmicroprocessortrenddata,
   title = {karlrupp/microprocessor-trend-data: Data repository for my blog series on microprocessor trend data.},
   year = 2023,
@@ -106,7 +104,6 @@
   urldate = {2023-09-23},
   date = {2023-09-23},
 }
-
 @inproceedings{klappenecker_03,
   title = {Unitary Error Bases: Constructions, Equivalence, and Applications},
   author = {Klappenecker, Andreas and R{\"o}tteler, Martin},
@@ -118,7 +115,6 @@
   isbn = {978-3-540-44828-0},
   editor = {Fossorier, Marc and H{\o}holdt, Tom and Poli, Alain},
 }
-
 @article{landauer61,
   title = {Irreversibility and Heat Generation in the Computing Process},
   author = {Landauer, R.},
@@ -129,7 +125,6 @@
   pages = {183--191},
   doi = {10.1147/rd.53.0183},
 }
-
 @misc{mathworldlatinsquare,
   title = {Latin Square -- from Wolfram MathWorld},
   year = 2023,
@@ -137,7 +132,6 @@
   urldate = {2023-09-18},
   date = {2023-09-18},
 }
-
 @misc{musto2016quantum,
   title = {Quantum Latin squares and unitary error bases},
   author = {Benjamin Musto and Jamie Vicary},
@@ -146,7 +140,6 @@
   archiveprefix = {arXiv},
   primaryclass = {quant-ph},
 }
-
 @misc{nandlogicwiki,
   title = {NAND logic - Wikipedia},
   year = 2023,
@@ -154,7 +147,6 @@
   urldate = {2023-09-16},
   date = {2023-09-02},
 }
-
 @misc{newtonsqrt,
   title = {Square Roots via Newton's Method},
   year = 2015,
@@ -162,7 +154,6 @@
   urldate = {2023-08-18},
   date = {2015-02-04},
 }
-
 @misc{oraclefloatingpoint,
   title = {What Every Computer Scientist Should Know About Floating-Point Arithmetic},
   year = 2023,
@@ -170,7 +161,6 @@
   urldate = {2023-09-14},
   date = {2023-09-14},
 }
-
 @misc{photoelectriceffectbritannica,
   title = {Photoelectric effect -- Britannica},
   author = {Britannica, T. Editors of Encyclopaedia},
@@ -179,7 +169,6 @@
   urldate = {2023-09-17},
   date = {2023-08-16},
 }
-
 @misc{qiskit,
   title = {Qiskit},
   year = 2023,
@@ -187,7 +176,6 @@
   urldate = {2023-08-20},
   date = {2023-08-20},
 }
-
 @misc{qiskitdeutsch,
   title = {Quantum query algorithms \vert{} IBM Quantum Learning},
   year = 2023,
@@ -195,7 +183,6 @@
   urldate = {2023-08-20},
   date = {2023-08-20},
 }
-
 @misc{qiskitentanglement,
   title = {Multiple qubits and entanglement},
   year = 2023,
@@ -203,7 +190,6 @@
   urldate = {2023-09-20},
   date = {2023-09-20},
 }
-
 @misc{quantacollatz,
   title = {The Simple Math Problem We Still Can't Solve \vert{} Quanta Magazine},
   year = 2020,
@@ -211,7 +197,6 @@
   urldate = {2023-08-18},
   date = {2020-09-22},
 }
-
 @misc{sanglardfloatingpoint,
   title = {Floating Point Visually Explained},
   author = {{F}abien {S}anglard},
