--- a/unitary_error_basis.tex
+++ b/unitary_error_basis.tex
@@ -100,5 +100,21 @@ $\textsf{tr}(A^*A) = -i^2 + -i^2 = 2$ \\[2mm]
 $d = 2$ \\[2mm]
 $\textsf{tr}(A^*B)/2 = 2/2 = 1$
 
+\section{Characterization}
+
+\begin{description}
+  \item[$U$:] $d \times d$ unitary matrix.
+  \item[$E_i(U)$:] $\sqrt{d} (U_{i,nd+m})_{n,m=0,\ldots,d-1}$
+\end{description}
+
+$U = \begin{bmatrix}
+  0 & -i \\
+  i & 0 \\
+\end{bmatrix}$
+
+$E_0(U) = \sqrt{2} \begin{bmatrix}
+  U_{0,0} & U_{0,1} \\
+  U_{0,2} & U_{0,3} \\
+\end{bmatrix}$
 
 \end{document}
