--- a/bibliography.bib
+++ b/bibliography.bib
@@ -205,3 +205,28 @@
   urldate = {2023-09-14},
   date = {2023-08-23},
 }
+@misc{klappenecker2003monomiality,
+      title={On the Monomiality of Nice Error Bases}, 
+      author={Andreas Klappenecker and Martin Roetteler},
+      year={2003},
+      eprint={quant-ph/0301078},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
+}
+@misc{knill1996group,
+      title={Group Representations, Error Bases and Quantum Codes}, 
+      author={E. Knill},
+      year={1996},
+      eprint={quant-ph/9608049},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
+}
+@article{Werner2000AllTA,
+  title={All teleportation and dense coding schemes},
+  author={Reinhard F. Werner},
+  journal={Journal of Physics A},
+  year={2000},
+  volume={34},
+  pages={7081-7094},
+  url={https://api.semanticscholar.org/CorpusID:9684671}
+}
