--- a/bibliography.bib
+++ b/bibliography.bib
@@ -177,7 +177,7 @@
   date = {2023-08-20},
 }
 @misc{qiskitdeutsch,
-  title = {Quantum query algorithms \vert{} IBM Quantum Learning},
+  title = {Quantum query algorithms -- IBM Quantum Learning},
   year = 2023,
   url = {https://learning.quantum-computing.ibm.com/course/fundamentals-of-quantum-algorithms/quantum-query-algorithms\#deutschs-algorithm},
   urldate = {2023-08-20},
