--- a/deutsch.tex
+++ b/deutsch.tex
@@ -11,7 +11,7 @@
 \marginnote{\bibentry{qiskitdeutsch}}
 \begin{quantikz}[slice all, slice style=gray, slice titles={$\ket{\psi_\col}$}]
   \lstick{$\ket{0}$} & &  & \gate{H} & \gate[2][20mm]{U}\gateinput{$x$}\gateoutput{$x$} & \gate{H} & \meter{} & \setwiretype{c} \\
-  \lstick{$\ket{0}$} & & \gate{X} & \gate{H} & \gateinput{$x$}\gateoutput{$y \oplus f(x)$}    &          &          &                  
+  \lstick{$\ket{0}$} & & \gate{X} & \gate{H} & \gateinput{$y$}\gateoutput{$y \oplus f(x)$}    &          &          &                  
 \end{quantikz} \\[16mm]
 $\ket{\psi_1} = \ket{0} \otimes \ket{0} = \ket{00} \rightarrow \begin{bmatrix} 1 \\ 0 \end{bmatrix} \otimes \begin{bmatrix} 1 \\ 0 \end{bmatrix} = \begin{bmatrix} 1 \begin{bmatrix} 1 \\ 0 \end{bmatrix} \\[6mm] 0 \begin{bmatrix} 1 \\ 0 \end{bmatrix} \end{bmatrix} = \begin{bmatrix} 1 \\ 0 \\ 0 \\ 0 \end{bmatrix}$ \\[16mm]
 $\ket{\psi_2} = (I \otimes X) \ket{\psi_1} = \begin{bmatrix} 0 & 1 & 0 & 0 \\ 1 & 0 & 0 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 1 & 0 \end{bmatrix} \begin{bmatrix} 1 \\ 0 \\ 0 \\ 0 \end{bmatrix} = \begin{bmatrix} 0 \\ 1 \\ 0 \\ 0 \end{bmatrix}$\\[16mm]
@@ -23,7 +23,7 @@ $\ket{\psi_3} = (H \otimes H) \ket{\psi_2} = \frac{1}{2} \begin{bmatrix} 1 & 1 &
 $H \otimes H = \frac{1}{\sqrt{2}\sqrt{2}} \begin{bmatrix}
   1 \begin{bmatrix} 1 & 1 \\ 1 & -1 \\ \end{bmatrix} & 1 \begin{bmatrix} 1 & 1 \\ 1 & -1 \\ \end{bmatrix} \\[5mm]
   1 \begin{bmatrix} 1 & 1 \\ 1 & -1 \\ \end{bmatrix} & -1 \begin{bmatrix} 1 & 1 \\ 1 & -1 \\ \end{bmatrix} \\
-\end{bmatrix} = \frac{1}{2} \begin{bmatrix} 1 & 1 & 1 & 1 \\ 1 & -1 & 1 & 1 \\ 1 & 1 & -1 & -1 \\ 1 & 1 & -1 & 1 \end{bmatrix}$
+\end{bmatrix} = \frac{1}{2} \begin{bmatrix} 1 & 1 & 1 & 1 \\ 1 & -1 & 1 & -1 \\ 1 & 1 & -1 & -1 \\ 1 & -1 & -1 & 1 \end{bmatrix}$
 
 
 
