--- a/relative.tex
+++ b/relative.tex
@@ -1,27 +1,29 @@
-\documentclass[crop]{standalone}
+\documentclass[]{standalone}
 
 \usepackage{ianstikz}
 
 \begin{document}
 \begin{tikzpicture}[scale=4]
+    \path (2.5, 2.5) -- (-0.5, -2.5);
     % Bottom of train.
-    \draw[-latex] (-1.9, 0) -- (1.9, 0) node[below left, gray] {\footnotesize $v_s$};
+    \draw[-latex] (-0.45, 0) -- (1.9, 0) node[below left, gray] {\footnotesize $v$};
     % Top of Train
-    \draw[-latex] (-1.9, 2) -- (1.9, 2) node[below left, gray] {\footnotesize };
+    \draw[-latex] (-0.45, 2) -- (1.9, 2) node[below left, gray] {\footnotesize $v$};
 
     % Stationary observer.
-    \draw[-latex, thick] (-1, 0) --node[above] {\footnotesize } (0, 2);
-    \draw[-latex, thick] (0, 2) --node[above=0.25] {\footnotesize } (1, 0);
-    \draw[gray, |-|, dashed] (-1, -0.025) --node[below] {\footnotesize $v_st_s$} (0, -0.025);
-    
+    \draw[-latex, thick] (1, 0) --node[above] {\footnotesize } (0, 2);
+    \draw[gray, |-|, dashed] (1.05, 0) --node[above, rotate=-60] {\footnotesize $c t_0$} (0.02, 2);
+
     % Train observer.
-    \draw[latex-latex, thick] (-1, 0) --node[above=0.25] {\footnotesize } (-1, 2);
-    \draw[gray, |-|, dashed] (0, 0) --node[below, rotate=90] {\footnotesize $d$} (0, 2);
+    \draw[-latex, thick] (0, 0) --node[above=0.25] {\footnotesize } (0, 2);
+    \draw[gray, |-|, dashed] (-0.05, 0) --node[above, rotate=90] {\footnotesize $c t_1$} (-0.05, 2);
+    \draw[gray, |-|, dashed] (0, -0.025) --node[below] {\footnotesize $v t_1$} (1, -0.025);
   
     \draw[gray] (0.1, 0.05) -- (0.05, 0.05) -- (0.05, 0.1);
   
-    \draw (1, 1.5) --node[] {$c = \frac{d}{t_t}$} (1, 1.5);
-    \draw (1, 1.3) --node[] {$c = \frac{\sqrt{d^2 + (v_st_s)^2}}{t_s}$} (1, 1.3);
-    \draw (1, 1.1) --node[] {$\frac{d}{t_t} = \frac{\sqrt{d^2 + (v_st_s)^2}}{t_s}$} (1, 1.1);
+    \path (1.2, 1.5) --node[] {$(c t_0)^2 = (c t_1)^2 + (v t_1)^2$} (1.2, 1.5);
+    \path (1.2, 1.3) --node[] {$c^2t_0^2 = c^2t_1^2 + v^2t_1^2$} (1.2, 1.3);
+    \path (1.2, 1.1) --node[] {$t_0^2 = \left(1 + \frac{v^2}{c^2}\right)t_1^2$} (1.2, 1.1);
+    \path (1.2, 0.9) --node[] {$t_0 =  t_1\sqrt{1 + \frac{v^2}{c^2}}$} (1.2, 0.9);
   \end{tikzpicture}
 \end{document}
