--- a/ianstikz.sty
+++ b/ianstikz.sty
@@ -65,6 +65,8 @@
 \usetikzlibrary{decorations.pathmorphing}
 % Matrices.
 \usetikzlibrary{matrix}
+% Symbols.
+\usepackage{tikzsymbols}
   
 % PGF plots version.
 \pgfplotsset{compat=1.18}
