--- a/relative.tex
+++ b/relative.tex
@@ -1,12 +1,12 @@
-\documentclass[]{standalone}
+\documentclass{standalone}
 
 \usepackage{ianstikz}
 
 \begin{document}
 \begin{tikzpicture}[scale=2]
     % Boundaries.
-    \path (-1, -1) rectangle (6, 5);
-
+    \draw (-1, -2) rectangle (5.3, 4.3);
+   
     % On the train.
     \draw[gray] (0, 3) rectangle (4, 4); 
     \draw (0.5, 3.5) node {\Strichmaxerl[2]};
@@ -18,7 +18,7 @@
     \draw[-latex] (4, 1.5) -- (4.5, 1.5) node[right] {$v$};
     \draw[-latex, thick] (2, 1) --node[right] {$ct$} (3, 2);
     \draw[-latex, thick] (2, 2) --node[above] {$vt$} (3, 2);
-    \draw[|-|, gray, dashed] (2, 1) --node[left] {$ct^\prime$} (2, 2);
+    \draw[gray, dashed] (2, 1) --node[left] {$ct^\prime$} (2, 2);
     \draw[gray] (2.1, 1.8) -- ++(0, 0.1) -- ++(0.1, 0);
     
     \path
